Bug 124398 - FILEOPEN DOCX Chart is missing from a document with charts and grouped texboxes
Summary: FILEOPEN DOCX Chart is missing from a document with charts and grouped texboxes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.5
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-03-28 15:36 UTC by NISZ LibreOffice Team
Modified: 2021-09-22 11:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
the original file with charts and textboxes living happily together. (108.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-03-28 15:37 UTC, NISZ LibreOffice Team
Details
a screenshot showcasing the crime scene. (111.74 KB, image/png)
2019-03-28 15:37 UTC, NISZ LibreOffice Team
Details
Screenshot (43.13 KB, image/png)
2019-04-19 22:06 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-03-28 15:36:34 UTC
Description:
This document contains two charts and a two small textboxes above each other, and one another textbox. Some of the object are grouped together. When the document is opened in LibreOffice Writer, the charts are missing and the textboxes inherit the size of the original chart suspiciously.

Steps to Reproduce:
    1. Open the attached document (Chart_missing-textbox_is_the_culprit.docx) in Microsoft Word and LibreOffice Writer.
    2. Compare the results.

Actual Results:
The charts are missing and the suspicious textboxes inherit the size of the original chart in LibreOffice Writer.

Expected Results:
The chart should remain, and the textbox should keep it's original size and position.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.3.0.0.alpha0+ (x64)
Build ID: ed6a71eafa61bade50219d2ff6233a42ab6d1c17
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-28_01:15:23
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-03-28 15:37:21 UTC
Created attachment 150362 [details]
the original file with charts and textboxes living happily together.
Comment 2 NISZ LibreOffice Team 2019-03-28 15:37:59 UTC
Created attachment 150363 [details]
a screenshot showcasing the crime scene.
Comment 3 mulla.tasanim 2019-03-30 08:21:14 UTC
Thank you for reporting the bug.

I can confirm that the bug is present in

Version: 6.2.1.2 (x64)
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL


Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 4 Aron Budea 2019-04-19 22:06:47 UTC
Created attachment 150886 [details]
Screenshot

For me it looks different in Word than in the original screenshot, see the screenshot I'm attaching.

Repro with 4.3.0.4, no issue with 4.2.0.4, regression.
Comment 5 Buovjaga 2019-04-22 16:09:04 UTC
win32-4.3 blames https://gerrit.libreoffice.org/plugins/gitiles/core/+/8c73b16f5f18f3bc1dbf9ff6c1475db56b44d304%5E!/
DOCX import: declare wpg as a supported feature

Same blame for bug 85232

Adding Cc: to Miklos Vajna
Comment 6 Commit Notification 2019-04-29 07:58:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/fdf4aaa3dc5cc1d2e7a112e6c32d7845f13caef8%5E%21

tdf#124398 DOCX drawingML import: handle charts in group shapes

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-04-29 11:31:01 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 101eea01c778ad255d3c8467e06643b23ff6bd76
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 8 Commit Notification 2019-05-17 11:26:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/9baed128acbbac24ef85a8470d721e8ee59b776f%5E%21

tdf#124398 DOCX drawingML import: handle charts in group shapes

It will be available in 6.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.